Remove all poorly used font-black classes

--- a/src/pages/2023/attendee-guide.mdx
+++ b/src/pages/2023/attendee-guide.mdx
@@ -6,7 +6,7 @@ import Image from "next/image";
 <SiteLayout title="Attendee Resources">
 
 <div className="border-b-4 border-purple border-solid pb-4 mb-4 text-center">
-  <p className="text-5xl font-display font-black">Attendee Resources</p>
+  <p className="text-5xl font-display font-medium">Attendee Resources</p>
 </div>
 <br />
 
