--- a/src/pages/2023/awards-advisor.mdx
+++ b/src/pages/2023/awards-advisor.mdx
@@ -4,7 +4,7 @@ import { AwardeeCard } from "../../components/awards/AwardeeCard";
 
 <SiteLayout title="Awards - Advisor">
   <div className="border-b-4 border-apricot border-solid pb-4 mb-4 text-center">
-    <p className="text-5xl font-display font-black">
+    <p className="text-5xl font-display font-medium">
       Awards - Advisor
     </p>
   </div>
