--- a/src/pages/2023/awards.mdx
+++ b/src/pages/2023/awards.mdx
@@ -5,7 +5,7 @@ import Image from "next/image";
 
 <SiteLayout title="Awards">
 <div className="border-b-4 border-apricot border-solid pb-4 mb-4 text-center">
-  <p className="text-5xl font-display font-black">Awards</p>
+  <p className="text-5xl font-display font-medium">Awards</p>
 </div>
 
 <Image
