--- a/src/pages/2023/expo.mdx
+++ b/src/pages/2023/expo.mdx
@@ -6,7 +6,7 @@ import Image from "next/image";
 
 <SiteLayout title="Expo">
 <div className="border-b-4 border-linen border-solid pb-4 mb-4 text-center">
-  <p className="text-5xl font-display font-black">Career & Grad School Expo</p>
+  <p className="text-5xl font-display font-medium">Career & Grad School Expo</p>
 </div>
 
 
