--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -6,7 +6,7 @@ import Image from "next/image";
 <SiteLayout title="Registration">
 
 <div className="border-b-4 border-ostem-blue border-solid pb-4 mb-4 text-center">
-  <p className="text-5xl font-display font-black">Registration</p>
+  <p className="text-5xl font-display font-medium">Registration</p>
 </div>
 
 <Image
