--- a/src/pages/2023/rfp.mdx
+++ b/src/pages/2023/rfp.mdx
@@ -6,7 +6,7 @@ import Image from "next/image";
 <SiteLayout title="Request for Proposals">
 
 <div className="border-b-4 border-chill-green border-solid pb-4 mb-4 text-center">
-  <p className="text-5xl font-display font-black">Requests for Proposals</p>
+  <p className="text-5xl font-display font-medium">Requests for Proposals</p>
 </div>
 
 <Image
