--- a/src/pages/2023/site-tour.mdx
+++ b/src/pages/2023/site-tour.mdx
@@ -6,7 +6,7 @@ import Image from "next/image";
 <SiteLayout title="Sponsor Site Tours">
 
 <div className="border-b-4 border-sky border-solid pb-4 mb-4 text-center">
-  <p className="text-5xl font-display font-black">Sponsor Site Tours</p>
+  <p className="text-5xl font-display font-medium">Sponsor Site Tours</p>
 </div>
 <br />
 
