--- a/src/pages/2024/partnership.mdx
+++ b/src/pages/2024/partnership.mdx
@@ -6,7 +6,7 @@ import Image from "next/future/image";
 
 <SiteLayout title="Partnerships">
 <div className="border-b-4 border-linen border-solid pb-4 mb-4 text-center">
-  <p className="text-5xl font-display font-black">Partnership Opportunities</p>
+  <p className="text-5xl font-display font-medium">Partnership Opportunities</p>
 </div>
 
 <Image
