--- a/src/pages/archive/2021/call-for-presentations.mdx
+++ b/src/pages/archive/2021/call-for-presentations.mdx
@@ -4,7 +4,7 @@ import { CTAButton } from "../../../components/button/CTAButton";
 <SiteLayout title="Call for Presentations">
 
 <div className="border-b-4 border-mulberry border-solid pb-4 mb-4 text-center">
-    <p className="text-5xl font-display font-black">Call for Poster and Symposium Presentations</p>
+    <p className="text-5xl font-display font-medium">Call for Poster and Symposium Presentations</p>
 </div>
 
 
