--- a/src/pages/archive/2021/hackathon.mdx
+++ b/src/pages/archive/2021/hackathon.mdx
@@ -4,7 +4,7 @@ import { CTAButton } from "../../../components/button/CTAButton";
 <SiteLayout title="Hackathon">
 
 <div className="border-b-4 border-mulberry border-solid pb-4 mb-4 text-center">
-    <p className="text-5xl font-display font-black">Hackathon</p>
+    <p className="text-5xl font-display font-medium">Hackathon</p>
 </div>
 
 The hackathon returns again at this year's virtual conference. We're looking for enthusiastic students
