--- a/src/pages/archive/2021/home.mdx
+++ b/src/pages/archive/2021/home.mdx
@@ -7,7 +7,7 @@ import { SiteLayout } from "../../../components/layout/SiteLayout";
 <SiteLayout>
 
 <div className="border-b-4 border-mulberry border-solid pb-4 text-center">
-    <p className="text-5xl font-display font-black text-mulberry">11th Annual oSTEM Conference 2021</p>
+    <p className="text-5xl font-display font-medium text-mulberry">11th Annual oSTEM Conference 2021</p>
     <p className="flex justify-center text-2xl font-display italic">Your Seat at Our Table</p>
     <hr/>
     <p className="flex justify-center text-3xl font-display">
