--- a/src/pages/archive/2021/schedule.mdx
+++ b/src/pages/archive/2021/schedule.mdx
@@ -4,7 +4,7 @@ import { CTAButton } from "../../../components/button/CTAButton";
 <SiteLayout title="Schedule">
 
 <div className="border-b-4 border-mulberry border-solid pb-4 mb-4 text-center">
-    <p className="text-5xl font-display font-black">
+    <p className="text-5xl font-display font-medium">
         High Level Conference Schedule
     </p>
 </div>
