--- a/src/pages/archive/2021/sponsors.mdx
+++ b/src/pages/archive/2021/sponsors.mdx
@@ -4,7 +4,7 @@ import { SiteLayout } from "../../../components/layout/SiteLayout";
 <SiteLayout title="Schedule">
 
 <div className="border-b-4 border-mulberry border-solid pb-4 mb-4 text-center">
-    <h1 className="text-5xl font-display font-black">
+    <h1 className="text-5xl font-display font-medium">
         Conference Sponsors
     </h1>
 </div>
