--- a/src/pages/archive/2022/home.mdx
+++ b/src/pages/archive/2022/home.mdx
@@ -11,7 +11,7 @@ import { SiteLayout } from "../../../components/layout/SiteLayout";
          src="/images/2022/2022_lightbluebanner.png"
          className="flex w-full mx-auto"
     />
-    <p className="text-5xl font-display font-black text-navy">12th Annual oSTEM Conference 2022</p>
+    <p className="text-5xl font-display font-medium text-navy">12th Annual oSTEM Conference 2022</p>
     <hr/>
     <p className="flex justify-center text-3xl font-display">
     November 11 &ndash; 13, 2022 | Boston, MA
