--- a/src/pages/archive/2022/registration.mdx
+++ b/src/pages/archive/2022/registration.mdx
@@ -5,7 +5,7 @@ import { TopicSquare } from "../../../components/rfp/TopicSquare";
 <SiteLayout title="Registration">
 
 <div className="border-b-4 border-deepwater border-solid pb-4 mb-4 text-center">
-    <p className="text-5xl font-display font-black">
+    <p className="text-5xl font-display font-medium">
         Registration
     </p>
 </div>
