--- a/src/pages/2023/cfp.mdx
+++ b/src/pages/2023/cfp.mdx
@@ -6,7 +6,7 @@ import Image from "next/image";
 <SiteLayout title="Poster Presenter Information">
 
 <div className="border-b-4 border-mulberry border-solid pb-4 mb-4 text-center">
-  <p className="text-5xl font-display font-black">Call for Posters</p>
+  <p className="text-5xl font-display font-medium">Call for Posters</p>
 </div>
 
 <Image
