--- a/src/pages/2023/recap.mdx
+++ b/src/pages/2023/recap.mdx
@@ -4,7 +4,7 @@ import { PhotoGallery } from "../../components/layout/PhotoGallery";
 
 <SiteLayout title="2022 Recap">
 <div className="border-b-4 border-raspberry border-solid pb-4 mb-4 text-center">
-  <p className="text-5xl font-display font-black">2022 Recap</p>
+  <p className="text-5xl font-display font-medium">2022 Recap</p>
 </div>
 
 <div>
