--- a/src/pages/2023/schedule.mdx
+++ b/src/pages/2023/schedule.mdx
@@ -6,7 +6,7 @@ import Image from "next/image";
 <SiteLayout title="Schedule">
 
 <div className="border-b-4 border-amber border-solid pb-4 mb-4 text-center">
-  <p className="text-5xl font-display font-black">Schedule</p>
+  <p className="text-5xl font-display font-medium">Schedule</p>
 </div>
 <br />
 
