--- a/src/pages/archive/2021/rfp.mdx
+++ b/src/pages/archive/2021/rfp.mdx
@@ -5,7 +5,7 @@ import { TopicSquare } from "../../../components/rfp/TopicSquare";
 <SiteLayout title="Request for Proposals">
 
 <div className="border-b-4 border-mulberry border-solid pb-4 mb-4 text-center">
-    <p className="text-5xl font-display font-black">Requests for Proposals</p>
+    <p className="text-5xl font-display font-medium">Requests for Proposals</p>
 </div>
 
 
