--- a/src/pages/archive/2022/awards.mdx
+++ b/src/pages/archive/2022/awards.mdx
@@ -4,7 +4,7 @@ import { SiteLayout } from "../../../components/layout/SiteLayout";
 <SiteLayout>
 
 <div className="border-b-4 border-mulberry border-solid pb-4 mb-4 text-center">
-    <p className="text-5xl font-display font-black">
+    <p className="text-5xl font-display font-medium">
         Awards
     </p>
 </div>
