--- a/src/pages/archive/2022/schedule.mdx
+++ b/src/pages/archive/2022/schedule.mdx
@@ -3,7 +3,7 @@ import { SiteLayout } from "../../../components/layout/SiteLayout";
 <SiteLayout title="Schedule">
 
 <div className="border-b-4 border-mulberry border-solid pb-4 mb-4 text-center">
-    <p className="text-5xl font-display font-black">
+    <p className="text-5xl font-display font-medium">
         2022 High Level Conference Schedule
     </p>
 </div>
