Landing page consistency

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -10,10 +10,10 @@ import { SiteLayout } from "../components/layout/SiteLayout";
   <img
     alt="Banner for the 14th Annual oSTEM Conference, from October 17-20 in Portland, OR."
     src="/images/2024/14th_annual_banner.png"
-    className="flex w-200 mx-auto"
+    className="flex w-200 mx-auto rounded"
   />
 </div>
-<div className="grid md:grid-cols-5 mt-9">
+<div className="grid md:grid-cols-5 mt-4">
   <div className="rounded md:col-span-5 mt-8 border-b-4 border-l-4 border-r-4 border-chill-green border-solid pb-4">
     <div className="bg-chill-green">
       <h3 className="p-4">2024 Conference Deadlines</h3>
@@ -42,13 +42,14 @@ import { SiteLayout } from "../components/layout/SiteLayout";
     </div>
   </div>
 
-  <div className="rounded-b mt-8 md:col-span-5 p-4 bg-tint-seamist">
+  <div className="rounded mt-8 md:col-span-5 p-4 bg-tint-seamist">
     <Image
       src="/images/2023/2023_homepage_bannerupdate.png"
       alt=""
       style={{width: "100%", height: 'auto'}}
       width="6000"
       height="2003"
+      className='rounded'
     />
     <h3>Conference for LGBTQ+ People in STEM</h3>
     <p>
