Migrate 2023 to legacy

--- a/src/pages/2024/partnership.mdx
+++ b/src/pages/2024/partnership.mdx
@@ -1,7 +1,7 @@
-import { SiteLayout } from "../../components/layout/SiteLayout";
-import { CTAButton } from "../../components/button/CTAButton";
-import { AwardSquare } from "../../components/awards/AwardSquare";
-import { AwardCard } from "../../components/awards/AwardCard";
+import { SiteLayout } from "@/components/layout/SiteLayout";
+import { CTAButton } from "@/components/button/CTAButton";
+import { AwardSquare } from "@/components/awards/AwardSquare";
+import { AwardCard } from "@/components/awards/AwardCard";
 import Image from "next/future/image";
 
 <SiteLayout title="Partnerships">
@@ -175,10 +175,7 @@ progress. **Please note that 2024 awards are not open yet.**
     id="embeded-exhibitor-script"
   ></script>
   <div id="whova-wrap" class="whova-wrap-class">
-    Powered By
-    <a class="brandlink" target="_blank" href="https://whova.com">
-      <b>Whova</b>
-    </a>
+    Powered by Whova
     <br />
   </div>
 </div>
