--- a/src/pages/archive/2022/registration.mdx
+++ b/src/pages/archive/2022/registration.mdx
@@ -1,6 +1,6 @@
-import { SiteLayout } from "../../../components/layout/SiteLayout";
-import { CTAButton } from "../../../components/button/CTAButton";
-import { TopicSquare } from "../../../components/rfp/TopicSquare";
+import { SiteLayout } from "@/components/layout/SiteLayout";
+import { CTAButton } from "@/components/button/CTAButton";
+import { TopicSquare } from "@/components/rfp/TopicSquare";
 
 <SiteLayout title="Registration">
 
