--- a/src/pages/archive/2023/awards-partner-excellence.mdx
+++ b/src/pages/archive/2023/awards-partner-excellence.mdx
@@ -1,6 +1,6 @@
-import { SiteLayout } from "../../components/layout/SiteLayout";
-import { AwardCardButton } from "../../components/awards/AwardCard";
-import { AwardeeCard } from "../../components/awards/AwardeeCard";
+import { SiteLayout } from "@/components/layout/SiteLayout";
+import { AwardCardButton } from "@/components/awards/AwardCard";
+import { AwardeeCard } from "@/components/awards/AwardeeCard";
 
 <SiteLayout title="Awards - Partner Excellence">
   <div className="border-b-4 border-apricot border-solid pb-4 mb-4 text-center">
