--- a/src/pages/archive/2023/awards.mdx
+++ b/src/pages/archive/2023/awards.mdx
@@ -1,6 +1,6 @@
-import { SiteLayout } from "../../components/layout/SiteLayout";
-import { AwardSquare } from "../../components/awards/AwardSquare";
-import { AwardCard } from "../../components/awards/AwardCard";
+import { SiteLayout } from "@/components/layout/SiteLayout";
+import { AwardSquare } from "@/components/awards/AwardSquare";
+import { AwardCard } from "@/components/awards/AwardCard";
 import Image from "next/image";
 
 <SiteLayout title="Awards">
