--- a/src/pages/archive/2023/expo.mdx
+++ b/src/pages/archive/2023/expo.mdx
@@ -1,7 +1,7 @@
-import { SiteLayout } from "../../components/layout/SiteLayout";
-import { CTAButton } from "../../components/button/CTAButton";
-import { AwardSquare } from "../../components/awards/AwardSquare";
-import { AwardCard } from "../../components/awards/AwardCard";
+import { SiteLayout } from "@/components/layout/SiteLayout";
+import { CTAButton } from "@/components/button/CTAButton";
+import { AwardSquare } from "@/components/awards/AwardSquare";
+import { AwardCard } from "@/components/awards/AwardCard";
 import Image from "next/image";
 
 <SiteLayout title="Expo">
