--- a/src/pages/archive/2023/recap.mdx
+++ b/src/pages/archive/2023/recap.mdx
@@ -1,6 +1,6 @@
-import { SiteLayout } from "../../components/layout/SiteLayout";
-import { CTAButton } from "../../components/button/CTAButton.tsx";
-import { PhotoGallery } from "../../components/layout/PhotoGallery";
+import { SiteLayout } from "@/components/layout/SiteLayout";
+import { CTAButton } from "@/components/button/CTAButton.tsx";
+import { PhotoGallery } from "@/components/layout/PhotoGallery";
 
 <SiteLayout title="2022 Recap">
 <div className="border-b-4 border-raspberry border-solid pb-4 mb-4 text-center">
