--- a/src/pages/archive/2022/faq.mdx
+++ b/src/pages/archive/2022/faq.mdx
@@ -1,5 +1,5 @@
-import { SiteLayout } from "../../../components/layout/SiteLayout";
-import { CTAButton } from "../../../components/button/CTAButton";
+import { SiteLayout } from "@/components/layout/SiteLayout";
+import { CTAButton } from "@/components/button/CTAButton";
 
 <SiteLayout title="Schedule">
 
