--- a/src/pages/archive/2022/speakers.mdx
+++ b/src/pages/archive/2022/speakers.mdx
@@ -1,4 +1,4 @@
-import { SiteLayout } from "../../../components/layout/SiteLayout";
+import { SiteLayout } from "@/components/layout/SiteLayout";
 
 <SiteLayout title="Speakers">
 <div>
