--- a/src/pages/archive/2023/site-tour.mdx
+++ b/src/pages/archive/2023/site-tour.mdx
@@ -1,6 +1,6 @@
-import { CTAButton } from "../../components/button/CTAButton";
-import { SiteLayout } from "../../components/layout/SiteLayout";
-import { TopicSquare } from "../../components/rfp/TopicSquare";
+import { CTAButton } from "@/components/button/CTAButton";
+import { SiteLayout } from "@/components/layout/SiteLayout";
+import { TopicSquare } from "@/components/rfp/TopicSquare";
 import Image from "next/image";
 
 <SiteLayout title="Sponsor Site Tours">
