--- a/src/pages/2023/partnership.mdx
+++ b/src/pages/2023/partnership.mdx
@@ -176,9 +176,9 @@ progress.
     type="text/javascript"
     id="embeded-exhibitor-script"
   ></script>
-  <div id="whova-wrap" class="whova-wrap-class">
+  <div id="whova-wrap" className="whova-wrap-class">
     Powered By
-    <a class="brandlink" target="_blank" href="https://whova.com">
+    <a className="brandlink" target="_blank" href="https://whova.com">
       <b>Whova</b>
     </a>
     <br />
