--- a/src/pages/2024/partnership.mdx
+++ b/src/pages/2024/partnership.mdx
@@ -6,15 +6,15 @@ import Image from "next/future/image";
 
 <SiteLayout title="Partnerships">
 <div className="border-b-4 border-linen border-solid pb-4 mb-4 text-center">
-  <p className="text-5xl font-display font-medium">Partnership Opportunities</p>
+  <p className="text-5xl font-display font-medium">Exhibition and Sponsorship Opportunities</p>
 </div>
 
 <Image
-  src="/images/partnership-banner-image.jpg"
+  src="/images/2024/partnership-banner-2024.webp"
   alt="Decorative banner image showing three oSTEM attendees looking into the camera at a previous oSTEM national conference."
   style={{width: "100%", height: 'auto'}}
-  width="400"
-  height="167"
+  width="1875"
+  height="625"
 />
 
 <br />
@@ -79,11 +79,11 @@ sponsorship@ostem.org.
 <br />
 
 <Image
-  src="/images/partnership-footer-image.jpg"
+  src="/images/2024/partnership-footer-image.jpg"
   alt=""
-  layout="responsive"
-  width="400"
-  height="267"
+  style={{width: "100%", height: 'auto'}}
+  width="6000"
+  height="4000"
   priority="true"
 />
 
@@ -161,26 +161,22 @@ progress. **Please note that 2024 awards are not open yet.**
   </CTAButton>
 </div>
 
-<br />
-
 ---
 
-<div>
-  <div title="Whova event and conference app" id="whova-exhibitorwidget">
-    <p id="whova-loading">Loading...</p>
-  </div>
-  <script
-    src="https://whova.com/static/frontend/xems/js/whova-exhibitor-widget.js?eid=w3nm9trIKDqa2Z4vqZBaEdUpVsJ8Xtqb1C7tvh3-BT0%3D&host=https://whova.com"
-    type="text/javascript"
-    id="embeded-exhibitor-script"
-  ></script>
-  <div id="whova-wrap" class="whova-wrap-class">
-    Powered By
-    <a class="brandlink" target="_blank" href="https://whova.com">
-      <b>Whova</b>
-    </a>
-    <br />
-  </div>
+### <div>Previous Exhibitors</div>
+
+<div className="mt-2">
+  View our previous 
+</div>
+
+<div className="my-1 pt-2 text-center">
+  <CTAButton
+    onClick="/2024/previous-exhibitors"
+    backgroundColor="rasp"
+    target="_self"
+  >
+    View 2023 Exhibitors
+  </CTAButton>
 </div>
 
 </SiteLayout>
