Page updates + 2023 archive redirect

--- a/src/pages/2024/partnership.mdx
+++ b/src/pages/2024/partnership.mdx
@@ -151,7 +151,7 @@ significant impact in our fields. We encourage you to nominate deserving
 individuals or projects that embody the spirit of inclusivity, innovation, and
 progress. **Please note that 2024 awards are not open yet.**
 
-<div className="my-1 pt-2 text-center">
+<div className="mt-2 mb-8 pt-2 text-center">
   <CTAButton
     onClick="/2023/awards#sponsor-awards"
     backgroundColor="rasp"
@@ -166,7 +166,7 @@ progress. **Please note that 2024 awards are not open yet.**
 ### <div>Previous Exhibitors</div>
 
 <div className="mt-2">
-  View our previous 
+  You may also view our previous exhibitors below.
 </div>
 
 <div className="my-1 pt-2 text-center">
