--- a/src/pages/2024/registration.mdx
+++ b/src/pages/2024/registration.mdx
@@ -47,7 +47,7 @@ Registration is not open yet. If you'd like, you can fill out the form below to 
 
 <div className="text-bright-peach font-bold text-center">
 
-### Previous Conference Registration
+### Previous Conference Information
 
 </div>
 
