--- a/src/pages/2024/rfp.mdx
+++ b/src/pages/2024/rfp.mdx
@@ -10,7 +10,8 @@ import Image from "next/future/image";
 </div>
 
 <picture>
-    <img src="/images/2024/2024_rfp_horizontal.png" alt="Graphical timeline for the 2024 RFP process"/>
+    <source srcSet="/images/2024/2024_rfp_vertical.png" media='(orientation: portrait)' alt="Graphical timeline explaining the 2024 RFP process. There are four headers titled Review the RFP, Three Tracks, Timeline, and Submit your App respectively. Details for each of the headers are explained in the text sections below this image."/>
+    <img src="/images/2024/2024_rfp_horizontal.png" alt="Graphical timeline explaining the 2024 RFP process. There are four headers titled Review the RFP, Three Tracks, Timeline, and Submit your App respectively. Details for each of the headers are explained in the text sections below this image."/>
 </picture>
 
 <div className="text-bright-peach font-bold">
