--- a/src/pages/2024/previous-exhibitors.mdx
+++ b/src/pages/2024/previous-exhibitors.mdx
@@ -27,18 +27,15 @@ import Image from "next/future/image";
 
 <div>
   <div title="Whova event and conference app" id="whova-exhibitorwidget">
-    <p id="whova-loading">Loading...</p>
+    <p id="whova-loading"><b>Loading... please wait.</b> <br/>Note: If this widget does not load after 15-20 seconds, please refresh the page.</p>
   </div>
   <script
     src="https://whova.com/static/frontend/xems/js/whova-exhibitor-widget.js?eid=w3nm9trIKDqa2Z4vqZBaEdUpVsJ8Xtqb1C7tvh3-BT0%3D&host=https://whova.com"
     type="text/javascript"
     id="embeded-exhibitor-script"
   ></script>
-  <div id="whova-wrap" class="whova-wrap-class">
-    Powered By
-    <a class="brandlink" target="_blank" href="https://whova.com">
-      <b>Whova</b>
-    </a>
+  <div id="whova-wrap" className="whova-wrap-class">
+    Powered By Whova
     <br />
   </div>
 </div>
