Navbar mobile/dark improvements

--- a/src/pages/2024/rfp.mdx
+++ b/src/pages/2024/rfp.mdx
@@ -11,7 +11,7 @@ import Image from "next/future/image";
 
 <picture>
     <source srcSet="/images/2024/2024_rfp_vertical.png" media='(orientation: portrait)' alt="Graphical timeline explaining the 2024 RFP process. There are four headers titled Review the RFP, Three Tracks, Timeline, and Submit your App respectively. Details for each of the headers are explained in the text sections below this image."/>
-    <img src="/images/2024/2024_rfp_horizontal.png" alt="Graphical timeline explaining the 2024 RFP process. There are four headers titled Review the RFP, Three Tracks, Timeline, and Submit your App respectively. Details for each of the headers are explained in the text sections below this image."/>
+    <img src="/images/2024/2024_rfp_horizontal.png" alt="Graphical timeline explaining the 2024 RFP process. There are four headers titled Review the RFP, Three Tracks, Timeline, and Submit your App respectively. Details for each of the headers are explained in the text sections below this image." className='mx-auto max-h-screen'/>
 </picture>
 
 <div className="text-bright-peach font-bold">
