--- a/src/pages/archive/2023/awards.mdx
+++ b/src/pages/archive/2023/awards.mdx
@@ -89,7 +89,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
     ]}
     alert="Self-nominations are accepted and encouraged. If you have any questions regarding this application, please contact us at info@ostem.org."
     nominateUrl="https://form.jotform.com/222027099625154"
-    awardDetailUrl="\2023\awards-global-stem-service"
+    awardDetailUrl="/2023/awards-global-stem-service"
   />
 </div>
 
@@ -122,7 +122,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
     borderColor="border-blue-500"
     alert="Please only submit one nomination per chapter. If you have any questions regarding this application, please contact us at membership@ostem.org."
     nominateUrl="https://form.jotform.com/231424936571357"
-    awardDetailUrl="\2023\awards-overall-chapter"
+    awardDetailUrl="/2023/awards-overall-chapter"
   />
 
 <AwardCard
@@ -136,7 +136,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
   borderColor="border-blue-500"
   alert="Please only submit one nomination per chapter. If you have any questions regarding this application, please contact us at membership@ostem.org."
   nominateUrl="https://form.jotform.com/231424895247361"
-  awardDetailUrl="\2023\awards-rookie-chapter"
+  awardDetailUrl="/2023/awards-rookie-chapter"
 />
 
 <AwardCard
@@ -149,7 +149,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
   borderColor="border-blue-500"
   alert="Self-nominations are accepted and encouraged. If you have any questions regarding this application, please contact us at membership@ostem.org."
   nominateUrl="https://form.jotform.com/231425712400341"
-  awardDetailUrl="\2023\awards-chapter-leader"
+  awardDetailUrl="/2023/awards-chapter-leader"
 />
 
 <AwardCard
@@ -162,7 +162,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
   borderColor="border-blue-500"
   alert="Self-nominations are accepted and encouraged. If you have any questions regarding this application, please contact us at membership@ostem.org."
   nominateUrl="https://form.jotform.com/231425475169359"
-  awardDetailUrl="\2023\awards-advisor"
+  awardDetailUrl="/2023/awards-advisor"
 />
 </div>
 
