--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -61,14 +61,15 @@ import { SiteLayout } from "../components/layout/SiteLayout";
       with 1,100+ LGBTQ+ students, professionals, and recruiters in STEM fields
       from across the country and around the globe. This space is designed for
       attendees to share their professional and personal experiences and learn
-      from one another in an authentic and vulnerable way. Programs and content
-      range from introspective (e.g., safer spaces to talk about queer issues
+      from one another in an authentic and vulnerable way. 
+    </p>
+    <p>
+      Programs and content range from introspective (e.g., safer spaces to talk about queer issues
       and career development) to technical (e.g., discussing the latest in
       research conducted by our members). The Career & Graduate School Expo
       allows attendees to connect and network with professionals, academics, and
-      colleagues from STEM industries and universities. For more examples of
-      sessions, speakers, and career expo exhibitors, visit the "2022 Recap" page. If you want a space where you can be your authentic
-      LGBTQ+ self and your authentic STEM self, this is the conference for you!
+      colleagues from STEM industries and universities. If you want a space where you can be your 
+      authentic LGBTQ+ self and your authentic STEM self, this is the conference for you!
     </p>
     </div>
   </div>
