--- a/src/pages/2023/attendee-guide.mdx
+++ b/src/pages/2023/attendee-guide.mdx
@@ -25,34 +25,9 @@ Not sure what to do when you arrive? Here's some tips on how to plan your trip:
       <tr>
         <td>
           <div className="flex flex-col w-40 sm:w-auto">
-            <b>John Wayne Airport (SNA)</b>
-            <p>11.8 miles from hotel</p>
-            <a href="https://www.ocair.com/travelers/flights/airlines/">
-              Airlines
-            </a>
-          </div>
-        </td>
-        <td>
-          <div className="flex flex-col w-40 sm:w-auto">
-            <b>Los Angeles International Airport (LAX)</b>
-            <p>35 miles from hotel</p>
-            <ul>
-              <li key="1">
-                <a href="https://www.flylax.com/lax-airline-list">Airlines</a>
-              </li>
-              <li key="2">
-                <a href="https://www.flylax.com/lax-traffic-and-ground-transportation#laxT">
-                  LAX Ground Transportation Options
-                </a>
-              </li>
-            </ul>
-          </div>
-        </td>
-        <td>
-          <div className="flex flex-col w-40 sm:w-auto">
-            <b>Long Beach Airport (LGB)</b>
-            <p>18 miles from hotel</p>
-            <a href="https://www.longbeach.gov/lgb/airlines-destinations/">
+            <b>Portland International Airport (PDX)</b>
+            <p>9.1 miles from Oregon Convention Center</p>
+            <a href="https://www.flypdx.com/AIRLINES">
               Airlines
             </a>
           </div>
