--- a/src/pages/2023/attendee-guide.mdx
+++ b/src/pages/2023/attendee-guide.mdx
@@ -43,13 +43,11 @@ Not sure what to do when you arrive? Here's some tips on how to plan your trip:
       <tr>
         <td>
           <div className="flex flex-col w-40 sm:w-auto">
-            <b>Anaheim Marriott</b>
-            <p>Guest Rates</p>
-            <p>On-Site Daily</p>
-            <ul>
-              <li key="self-parking">Self-Parking: $30</li>
-              <li key="guest-valet">Guest Valet: $40</li>
-            </ul>
+            <b>Oregon Convention Center Parking</b>
+            <p>Standard Daily Parking Rate: $12</p>
+            <a href="https://www.oregoncc.org/en/attend/parking-directions">
+              More details
+            </a>
           </div>
         </td>
         <td>
