--- a/src/pages/2023/attendee-guide.mdx
+++ b/src/pages/2023/attendee-guide.mdx
@@ -46,7 +46,7 @@ Not sure what to do when you arrive? Here's some tips on how to plan your trip:
             <b>Oregon Convention Center Parking</b>
             <p>Standard Daily Parking Rate: $12</p>
             <a href="https://www.oregoncc.org/en/attend/parking-directions">
-              More details
+              Directions & More
             </a>
           </div>
         </td>
@@ -65,44 +65,29 @@ Not sure what to do when you arrive? Here's some tips on how to plan your trip:
             <b>Bus Stations</b>
             <ul>
               <li key="greyhound">
-                <a href="http://locations.greyhound.com/">
-                  Anaheim Greyhound Station{" "}
+                <a href="https://trimet.org/schedules/r006.htm">
+                  TriMet’s Bus Line No. 6
                 </a>
-                <em>(Stops 3 miles from Anaheim Marriott)</em>
-              </li>
-              <li key="resort-transport">
-                <a href="http://rideart.org/">Anaheim Resort Transportation </a>
-                <em>(Convention Way EB @ 700 W. Convention Way)</em>
+                <em>(Stops at the MLK Lobby entrance & provides access to downtown stops)</em>
               </li>
             </ul>
           </div>
         </td>
         <td>
           <div className="flex flex-col w-40 sm:w-auto">
-            <b>Metro/Shuttles</b>
+            <b>Light Rails/Streetcars</b>
             <ul>
               <li key="octa">
-                <a href="https://www.octa.net/">
-                  Orange County Transportation Authority (OCTA){" "}
+                <a href="https://trimet.org/home/">
+                  Portland's TriMet MAX light rail
                 </a>
-                <em>(Stops 3 miles from Anaheim Marriott)</em>
-              </li>
-              <li key="metrolink">
-                <a href="https://metrolinktrains.com/">MetroLink</a>
+                <em>(Stops 300 times per day)</em>
               </li>
               <li key="shuttle-one">
-                <a href="http://www.shuttleone.net/">ShuttleOne </a>
-                <em>(Disneyland Express)</em>
-              </li>
-              <li key="mickey's-space-ship">
-                <a href="https://mickeysdisneylandexpress.com/">
-                  Mickey's Space Ship Shuttle
+                <a href="https://portlandstreetcar.org/">
+                  Portland Streetcar
                 </a>
-              </li>
-              <li key="super-shuttle">
-                <a href="https://www.supershuttle.com/ride-choices/non-stop-shuttle/">
-                  Super Shuttle Express
-                </a>
+                <em>(Central Loop stops at MLK Lobby entrance every 15 minutes)</em>
               </li>
             </ul>
           </div>
