--- a/src/pages/2023/attendee-guide.mdx
+++ b/src/pages/2023/attendee-guide.mdx
@@ -56,7 +56,7 @@ Not sure what to do when you arrive? Here's some tips on how to plan your trip:
 </TopicSquare>
 
 <TopicSquare title="PUBLIC TRANSPORTATION" borderColor="border-yellow-500">
-  <em>Buses and subways and trains, oh my!</em>
+  <em>Buses and light rails and trains, oh my!</em>
   <div className="overflow-x-scroll">
     <table>
       <tr>
@@ -66,7 +66,7 @@ Not sure what to do when you arrive? Here's some tips on how to plan your trip:
             <ul>
               <li key="greyhound">
                 <a href="https://trimet.org/schedules/r006.htm">
-                  TriMet’s Bus Line No. 6
+                  TriMet’s Bus Line No. 6 
                 </a>
                 <em>(Stops at the MLK Lobby entrance & provides access to downtown stops)</em>
               </li>
@@ -97,39 +97,12 @@ Not sure what to do when you arrive? Here's some tips on how to plan your trip:
             <b>Train Station</b>
             <ul>
               <li key="amtrak">
-                <a href="https://www.amtrak.com/stations/ana.html">
-                  Anaheim Amtrak Station{" "}
+                <a href="https://www.amtrak.com/stations/pdx">
+                  Portland Union Amtrak Station
                 </a>
                 <em>
-                  (Stops at Anaheim Regional Transportation Intermodal (ARTIC)
-                  then take ART bus to hotel)
+                  (1.3 miles from Oregon Convention Center)
                 </em>
-              </li>
-            </ul>
-          </div>
-        </td>
-        <td>
-          <div className="flex flex-col w-40 sm:w-auto">
-            <b>Anaheim Transportation Network</b>
-            <ul>
-              <li key="1">
-                <a href="https://rideart.org/art/">
-                  Anaheim Regional Transportation (ART) Bus{" "}
-                </a>
-                <em>
-                  (Hotel stop is Convention Way EB @ 700 W. Convention Way)
-                </em>
-              </li>
-              <li key="2">
-                <a href="https://rideart.org/fran/">
-                  Free Rides Around the Neighborhood (FRAN){" "}
-                </a>
-              </li>
-              <li key="3">
-                <a href="https://rideart.org/eve/">
-                  Everyone Ventures Everywhere (EVE){" "}
-                </a>
-                <em>Connects to SNA Airport</em>
               </li>
             </ul>
           </div>
@@ -142,78 +115,6 @@ Not sure what to do when you arrive? Here's some tips on how to plan your trip:
 <br />
 <hr />
 
-### TRAVEL OPTIONS FROM **LAX** AIRPORT TO CONFERENCE HOTEL
-
-- **Ride-share like Uber or Lyft (Most Convenient)**
-  - Time and costs will vary
-- **Public Transportation - Option 1 (Fastest - About $30 pp | About 1 hour )**
-  - From LAX, take the
-    <a href="https://www.flylax.com/flyaway-bus/union-station"> FlyAway </a>
-    shuttle to Union Station - 10-25 minutes | One-way fare is $9.75
-  - From Union Station, take the Amtrak Pacific Surfliner to Anaheim, CA (ANA)
-    - 38 min | $16-$26
-      (<a href="https://www.amtrak.com/student-discounts">Student discount
-      available</a>)
-  - From Anaheim Regional Transportation Intermodal Center (ARTIC) bay 8, 12 or
-    13, take the Anaheim Regional Transportation (ART) bus (15 Artic Express
-    Line) to Disneyland Main Transportation Center - 15
-  - Take the 05 Grand Plaza Line ART bus to Convention Way EB @ 700 W.
-    Convention Way
-    - One-way ART bus fare is $4
-- **Public Transportation - Option 2 (Cheapest - About $22 pp | About 1.5
-  hours)**
-
-  - From LAX, take
-    the<a href="https://www.flylax.com/flyaway-bus/union-station"> FlyAway </a>
-    shuttle to Union Station
-
-    - 10-25 minutes | One-way fare is $9.75
-
-  - From Union Station, take
-    the<a href="https://metrolinktrains.com/ticketsOverview/where-to-buy/">
-    MetroLink </a>Orange County Line to Anaheim
-    - 43 min | One-way fare is $8.75 | Student discount is $6.50
-  - From Anaheim Regional Transportation Intermodal Center (ARTIC) bay 8, 12 or
-    13, take the Anaheim Regional Transportation (ART) bus (15 Artic Express
-    Line) to Disneyland Main Transportation Center - 15
-  - Take the 05 Grand Plaza Line ART bus to Convention Way EB @ 700 W.
-    Convention Way
-    - One-way ART bus fare is $4
-
-<br />
-
-### TRAVEL OPTIONS FROM **SNA** AIRPORT TO CONFERENCE HOTEL
-
-- **Ride-share like Uber or Lyft (Most Convenient)**
-  - Time and costs will vary
-- **Public Transportation - Option 1 (Fastest)**
-  - From SNA Airport, take the <a href="https://rideart.org/eve/"> Everyone
-    Ventures Everywhere (EVE) </a> shuttle to Convention Way EB @ 700 W.
-    Convention Way (05 Grand Plaza Line)
-    - One-way fare is $15 pp | Round-trip is $30 pp
-
-<br />
-
-<div className="text-bright-peach font-bold">
-
-## Student Travel Funding Closed
-
-</div>
-
-Through the generous donations of corporate and individual donors, we are accepting requests for travel and registration support to help students offset the cost of their trip to the Annual Conference in Anaheim, CA. The funds can be used to purchase registrations or book hotel nights at the host hotel under the block rate, and will be disbursed by means of Conference Registration Codes and/or Hotel Night Bookings. The deadline for Booz Allen Foundation funding has been extended to Monday, October 9, 2023.
-
-<br/>
-
-**Booz Allen Foundation: Travel Support - Closed** (student conference registrations or hotel bookings) 
- 
- * Eligibility: Open to students attending Minority Serving Institutes (MSIs) such as HBCUs, HSIs, TCUs, etc.
-
-**Emerson Charitable Trust: Student Conference Registrations - Closed**
-
-  * Eligibility: Open to all LGBTQ+ students.
-  * Priority will be given to students traveling from the following states: FL, TX, TN, GA, AZ, OH, LA, SC, MT, NE, and MO.
-
-<br />
 
 <div className="text-bright-peach font-bold">
 
