--- a/src/pages/2023/attendee-guide.mdx
+++ b/src/pages/2023/attendee-guide.mdx
@@ -126,7 +126,7 @@ Asking for support from your supervisor or academic department can feel daunting
 
 <br/>
 <div className="text-l flex justify-center p-2">
-    <CTAButton onClick="https://www.notion.so/ostem/Conference-Attendee-Resources-679ca7be44f34c4ca6dace34ea5f8eca/" backgroundColor="bright-peach">
+    <CTAButton onClick="https://www.notion.so/ostem/Conference-Attendee-Resources-2024-76ea110de8a447278d856623c7e8a7ce?pvs=4" backgroundColor="bright-peach">
       Conference Attendee Resources
     </CTAButton>
 </div>
